name:                schnizle
version:             0.1.0.0
synopsis:            My personal blog
homepage:            felix.schnizle.in
license:             GPL-3
license-file:        LICENSE
author:              Felix Schnizlein
maintainer:          felix@schnizle.in
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable schnizle
  main-is:             schnizle.hs
  build-depends:       base >=4.8 && <4.9
                      , hakyll >=4.7 && <4.8
                      , hakyll-sass >= 0.2.0
                      , pandoc >= 1.15.0.6
                      , highlighting-kate >= 0.6
                      , directory >= 1.2.2.0
                      , process >= 1.2.3.0
                      , filepath >= 1.4.0.0
                      , containers >= 0.5.6.2
                      , binary >= 0.7.5.0
                      , time >= 1.5.0.1
  ghc-options:         -threaded
  default-language:    Haskell2010
